# CargoTap

./: .ai_tips.md  .gitignore  ATLAS_DEBUG.md  CHANGELOG_CONFIG.md  CHANGES_SUMMARY.md  CLAUDE.md  CODESTATE_IMPLEMENTATION.md  COLORED_TEXT_IMPLEMENTATION_SUMMARY.md  COLORED_TEXT_USAGE.md  CONFIG.md  CONFIGURATION_QUICKSTART.md  CONFIG_README.md  Cargo.toml  FEATURE_CONFIG_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  PROFILING.md  README.md  config.toml.example  test_file.rs
examples/: code_with_emoji.rs  practice_code.rs  progress_storage_demo.rs  test_progress.rs
src/: app.rs  char_utils.rs  code_state.rs  config.rs  demo_code.rs  demo_code_multi.rs  demo_code_state.rs  event_handler.rs  input.rs  main.rs  profiling.rs  progress_helper.rs  progress_storage.rs  renderer.rs  session_history.rs  session_state.rs  text.rs  typing_handler.rs  ui.rs  ui_blocks.rs
src/examples/: colored_text_demo.rs  mod.rs
src/renderer/: README.md  mod.rs  pipeline.rs  swapchain.rs  vulkan_init.rs
src/shaders/: text_frag.glsl  text_vert.glsl
