[package]
name = "CargoTap"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.11"
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
ab_glyph = "0.2.21"
anyhow = "1.0.75"
simple_logger = "4.3.0"
log = "0.4.20"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"